@@ -17,8 +17,10 @@
  *  along with this program.  If not, see <http://www.gnu.org/licenses/>.
  */
 
+#include "config.h"
 #include "common.h"
 #include "log.h"
+#include "dest.h"
 #include "globals.h"
 #include "settings.h"
 
