@@ -1,4 +1,4 @@
-AC_INIT([mbuffer],[20170921])
+AC_INIT([mbuffer],[20171011])
 AC_CONFIG_HEADER([config.h])
 AC_CONFIG_SRCDIR([mbuffer.c])
 
@@ -34,7 +34,7 @@ if test "${USRCFLAGS}" = "" ; then
 		cflags_tmp="${CFLAGS}"
 		CFLAGS="${CFLAGS} -m64"
 		AC_MSG_CHECKING([whether $CC supports $CFLAGS])
-		AC_RUN_IFELSE([AC_LANG_PROGRAM([])],
+		AC_COMPILE_IFELSE([AC_LANG_PROGRAM([])],
 			[AC_MSG_RESULT([yes])],
 			[AC_MSG_RESULT([no])]
 			CFLAGS="$cflags_tmp"
@@ -49,7 +49,7 @@ if test "${USRCFLAGS}" = "" ; then
 			if test "${HAS_M64}" != "" ; then
 				CFLAGS="${CFLAGS} -m64"
 				AC_MSG_CHECKING([whether $CC supports $CFLAGS])
-				AC_RUN_IFELSE([AC_LANG_PROGRAM([])],
+				AC_COMPILE_IFELSE([AC_LANG_PROGRAM([])],
 					[AC_MSG_RESULT([yes])],
 					[AC_MSG_RESULT([no])]
 					CFLAGS="$cflags_tmp"
@@ -57,7 +57,7 @@ if test "${USRCFLAGS}" = "" ; then
 			else
 				CFLAGS="${CFLAGS} -xarch=generic64"
 				AC_MSG_CHECKING([whether $CC supports $CFLAGS])
-				AC_RUN_IFELSE([AC_LANG_PROGRAM([])],
+				AC_COMPILE_IFELSE([AC_LANG_PROGRAM([])],
 					[AC_MSG_RESULT([yes])],
 					[AC_MSG_RESULT([no])]
 					CFLAGS="$cflags_tmp"
@@ -74,7 +74,7 @@ fi
 cflags_tmp="$CFLAGS"
 CFLAGS="$CFLAGS -Wno-unused-result"
 AC_MSG_CHECKING([whether $CC provides -Wunused-result])
-AC_RUN_IFELSE([AC_LANG_PROGRAM([])],
+AC_COMPILE_IFELSE([AC_LANG_PROGRAM([])],
 	[AC_MSG_RESULT([yes])],
 	[AC_MSG_RESULT([no])]
 	CFLAGS="$cflags_tmp"
@@ -92,6 +92,7 @@ AC_STRUCT_ST_BLKSIZE
 
 AC_HEADER_ASSERT
 AC_CHECK_LIB(pthread, pthread_mutex_init)
+AC_SEARCH_LIBS(dlsym,dl)
 AC_SEARCH_LIBS(clock_gettime,rt,,AC_MSG_ERROR(could not find the library containing clock_gettime!))
 AC_SEARCH_LIBS(sem_init,rt posix,,AC_MSG_ERROR(could not find semaphore functions!))
 AC_SEARCH_LIBS(rint,m,,AC_MSG_ERROR(unable to find rint))
